Fix readme, fix characters that were wrongly appended to email

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "email-scraper",
-  "version": "1.0.0",
+  "name": "html-email-scraper",
+  "version": "1.0.1",
   "description": "A scraping package that allows retrieving emails out of obfuscated html",
   "main": "scraper.js",
   "scripts": {
